homework-1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework1-deployment
  namespace: otus
spec:
  selector:
    matchLabels:
      app: homework1-app
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: homework1-app
    spec:
      containers:
        - image: uwhy10/homework1
          name: homework1
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
