homework-1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework1-service
  namespace: otus
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: homework1-app
