homework-1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework1-ingress
  namespace: otus
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
            - path: /health
              pathType: Prefix
              backend:
                service:
                  name: homework1-service
                  port:
                    number: 8000
            - path: /otusapp/(\w+)/(.*)$
              pathType: Prefix
              backend:
                service:
                  name: homework1-service
                  port:
                    number: 8000
